--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,13 @@ readme      = "README.md"
 
 
 [dependencies]
-nix = "0.17"
+# nix = "0.17"
 regex = "1.3"
 error-chain = "0.12"
-tempfile = "3"
+tempfile = "3" # Needed on Windows?
+
+[target.'cfg(unix)'.dependencies]
+nix = "0.17"
 
 [badges]
 travis-ci = { repository = "philippkeller/rexpect" }
