--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,13 @@ regex = "1.3"
 error-chain = "0.12"
 tempfile = "3" # Needed on Windows?
 
+
 [target.'cfg(unix)'.dependencies]
 nix = "0.17"
+
+
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = ["consoleapi"] }
 
 [badges]
 travis-ci = { repository = "philippkeller/rexpect" }
