--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,12 +19,16 @@ error-chain = "0.12"
 tempfile = "3" # Needed on Windows?
 
 
+
+
 [target.'cfg(unix)'.dependencies]
 nix = "0.17"
 
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3", features = ["consoleapi", "namedpipeapi"] }
+winapi = { version = "0.3", features = ["consoleapi", "impl-default", "namedpipeapi"] }
+lazy_static = "1.4.0"
+static_assertions = "1.1.0"
 
 [badges]
 travis-ci = { repository = "philippkeller/rexpect" }
