use new ptyproc api

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ readme      = "README.md"
 regex = "1"
 error-chain = "0.12"
 tempfile = "3"
-ptyproc = { version = "0.1", git = "https://github.com/TyPR124/ptyproc" }
+ptyproc = { version = "0.1", git = "https://github.com/TyPR124/ptyproc", branch = "rework_ptyprocess" }
 
 
 [badges]
